# TERMinator-Android

./: .gitignore  create_android_icons.py  create_bbs_icon.py  create_bbs_icon_preview.py  create_icon.py  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
3rdp/src/cl/: COPYING  README  Test32.vcxproj  Test32.vcxproj.filters  cl32.lib  cl64.lib  crypt.h.orig  crypt32.def  crypt32.dsp  crypt32.rc  crypt32.sln  crypt32.vcxproj  crypt32.vcxproj.filters  crypt32.vcxproj.orig  cryptapi.c  cryptcrt.c  cryptctx.c  cryptdev.c  cryptenv.c  cryptkey.c  cryptkrn.h  cryptlib.asn  cryptlib.c  cryptlib.h  cryptlib.h.bak  cryptlib.h.orig  cryptses.c  cryptusr.c  makefile  makefile.orig  test32.dsp  test32.sln  ubsan_blacklist.txt
3rdp/src/cl/bindings/: PerlCryptLib.ph  PerlCryptLib.xs  cryptlib.bas  cryptlib.cs  cryptlib.pas  java_jni.c  python.c  setup.py
3rdp/src/cl/bn/: bn.h  bn_bpsw.c  bn_exp.c  bn_lcl.h  bn_lcl.h.orig  bn_mul.c  ec_mult.c
3rdp/src/cl/cert/: cert.h  certattr.h  certfn.h  certrev.c  certschk.c  certsign.c  certval.c  chain.c  chk_cert.c  chk_chain.c  chk_san.c  chk_use.c  comp_cert.c  comp_curs.c  comp_del.c  comp_get.c  comp_gets.c  comp_pkiuser.c  comp_set.c  dn.c  dn.c.orig  dn.h  dn_rw.c  dn_rws.c  dn_string.c  ext.c  ext_add.c  ext_add.c.orig  ext_check.c  ext_copy.c  ext_def.c  ext_rd.c  ext_rdattr.c  ext_rdstack.c  ext_wr.c  imp_check.c  imp_exp.c  read.c  trustmgr.c  trustmgr.h  (+3 more)
3rdp/src/cl/context/: context.h  ctx_3des.c  ctx_aes.c  ctx_attr.c  ctx_attr.c.orig  ctx_bn.c  ctx_bnmath.c  ctx_bnpkc.c  ctx_bnprime.c  ctx_bnrw.c  ctx_bnsieve.c  ctx_bntest.c  ctx_cast.c  ctx_chacha20.c  ctx_des.c  ctx_dh.c  ctx_dsa.c  ctx_ecdh.c  ctx_ecdsa.c  ctx_elg.c  ctx_encr.c  ctx_generic.c  ctx_hsha.c  ctx_hsha2.c  ctx_hsha2.c.orig  ctx_idea.c  ctx_md5.c  ctx_misc.c  ctx_poly1305.c  ctx_rc2.c  ctx_rc4.c  ctx_rsa.c  ctx_sha.c  ctx_sha2.c  key_id.c  key_rdpriv.c  key_rdpub.c  key_wrpriv.c  key_wrpub.c  keygen.h  (+6 more)
3rdp/src/cl/crypt/: aes.h  aes_via_ace.h  aesopt.h  aesopt.h.orig  brg_endian.h  brg_types.h  chacha20.c  djb.h  gf128mul.c  osconfig.h  osconfig.h.orig  poly1305.c  poly1305_32.h  poly1305_64.h  rc4.h  rc4enc.c
3rdp/src/cl/device/: capabil.h  dev_attr.c  dev_storage.c  device.h  hardware.c  hardware.h  hw_misc.c  hw_templalg.c  hw_template.c  hw_template.h  ms_capi.c  pkcs11.c  pkcs11_api.h  pkcs11_init.c  pkcs11_init.c.orig  pkcs11_pkc.c  pkcs11_rd.c  pkcs11_rd.c.orig  pkcs11_wr.c  system.c  tpm.c  tpm.h  tpm_emu.c  tpm_pkc.c  tss2_common.h  tss2_fapi.h  tss2_tcti.h  tss2_tpm2_types.h
3rdp/src/cl/enc_dec/: asn1.h  asn1_algoenc.c  asn1_algoid.c  asn1_check.c  asn1_ext.c  asn1_ext.h  asn1_int.h  asn1_oid.c  asn1_rd.c  asn1_wr.c  base32.c  base64.c  base64_id.c  misc_rw.c  misc_rw.h  pgp_rw.c  pgp_rw.h
3rdp/src/cl/envelope/: cms_deenv.c  cms_env.c  cms_envpre.c  decode.c  encode.c  env_attr.c  envelope.h  pgp_deenv.c  pgp_env.c  res_action.c  res_deenv.c  res_env.c
3rdp/src/cl/io/: dns.c  dns.c.orig  dns_srv.c  eap.c  eap.h  eap_rd.c  eap_wr.c  file.c  file.c.orig  file.h  http.c  http.h  http_parse.c  http_rd.c  http_wr.c  memory.c  net.c  net_proxy.c  net_trans.c  net_url.c  stream.c  stream.h  stream_int.h  tcp.c  tcp.h  tcp.h.orig  tcp_conn.c  tcp_err.c  tcp_int.h  tcp_rw.c  tcp_rw.c.orig
3rdp/src/cl/kernel/: acl.h  acl_perm.h  attr_acl.c  attr_acl.c.orig  certmgt_acl.c  init.c  int_msg.c  kernel.h  kernelfns.h  key_acl.c  mech_acl.c  msg_acl.c  obj_access.c  objectfns.h  objects.c  sec_mem.c  selftest.c  semaphore.c  sendmsg.c  storage.c  thread.h  thread.h.orig
3rdp/src/cl/keyset/: ca_add.c  (+36 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_ciolib.c  android_ciolib.h  android_stubs.c  safe_math.h  syncterm_jni.c  zmodem_jni.c
app/src/main/cpp/cryptlib/include/: crypt.h
src/conio/: ciolib.h  cterm.c  cterm.h  gentable.c  test.c  winhack.c
src/sbbs3/: zmodem.c
src/sftp/: sftp_internal.h
src/syncterm/: conn_telnet.c  rlogin.c  test.c  webget.mk
src/xpdev/: mswave.c  test.c
(+394 files in other folders)
